--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,47 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+body,
+html, {
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
+    font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+    margin: 0;
+} 
+
+@media (prefers-color-scheme: dark) {
+    body { background:  rgb(0, 0, 0);}
+  }
+  
+  @media (prefers-color-scheme: light) {
+    body { background:  rgb(54, 65, 83);}
+  }
+
+#root {
+    height: 100vh;
+    width: 100vw;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    height: 3px;
+    padding-top: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: rgb(17, 23, 41);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(65, 83, 107);
+}
+
+button:active {
+    outline: none !important;
+}
+
+button:focus {
+    outline: none !important;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
